--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -3,7 +3,8 @@
     .ft-item-1
       .t-top
         .t-t-l
-          p.ft-t.t-l-t 格言🧬
+          p.ft-t.t-l-t 星辰之旅🌠
+          //格言🧬
           .bg-ad
             div
               | 再看看那个光点，它就在这里，这是家园，这是我们 —— 你所爱的每一个人，你认识的一个人，你听说过的每一个人，曾经有过的每一个人，都在它上面度过他们的一生✨
@@ -13,20 +14,20 @@
           p.ft-t.t-l-t 猜你想看💡
           ul.ft-links
             li
-              a(href='/box/nav/') 网址导航
-              a(href='/comments/') 留点什么
-            li
-              a(href='/personal/about/') 关于作者
-              a(href='/archives/') 文章归档
-            li
-              a(href='/categories/') 文章分类
-              a(href='/tags/') 文章标签
-            li
-              a(href='/social/link/') 我的朋友
-              a(href='/personal/bb/') 我的唠叨
-            li
               a(href='/site/time/') 建设进程
+              a(href='/personal/about/') 关于作者
+            li
+              a(href='/archives/') 文章归档
+              a(href='/categories/') 文章分类
+            li
+              a(href='/tags/') 文章标签
               a(href='/site/census/') 网站统计
+            li
+              a(href='/box/Gallery/') 我的画廊
+              a(href='/social/link/') 我的朋友
+            li
+              a(href='/comments/') 留点什么
+              a(href='/box/nav/') 网址导航
     .ft-item-2
       p.ft-t 推荐友链⌛
       .ft-img-group
