--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -15,7 +15,7 @@
           ul.ft-links
             li
               a(href='/site/time/') 建设进程
-              a(href='/personal/about/') 关于作者
+              a(href='/about/') 关于作者
             li
               a(href='/archives/') 文章归档
               a(href='/categories/') 文章分类
