--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -33,10 +33,10 @@
       .ft-img-group
         .img-group-item
           a(href='https://www.fomal.cc/' title='Fomalhaut🥝')
-            img(src='/assets/gulp/avatar.webp' alt='')
+            img(src='https://www.fomal.cc/assets/avatar.webp' alt='')
         .img-group-item
-          a(href='javascript:void(0)' title='广告位招租')
-            img(src='/assets/ErrAvatar.jpg' alt='')
+          a(href='http://lxtyin.ac.cn/' title='lx_tyin')
+            img(src='http://cclmsy.gitee.io/sourse/Images/Avatars/lxtyin.png' alt='')
         .img-group-item
           a(href='javascript:void(0)' title='广告位招租')
             img(src='/assets/ErrAvatar.jpg' alt='')
