--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -103,8 +103,8 @@
     //- a.github-badge(target='_blank' href="https://user.51.la/" style='margin-inline:5px' title="本站数据分析得益于51la技术支持")
     //-   img(src="https://sourcebucket.s3.ladydaily.com/badge/Analytics-51la-3db1eb.svg" alt='')
 
-    //- a.github-badge(target='_blank' href="https://icp.gov.moe/?keyword=20226665" style='margin-inline:5px' title="本站已加入萌ICP豪华套餐，萌ICP备20226665号")
-    //-   img(src="https://sourcebucket.s3.ladydaily.com/badge/萌ICP备-20226665-fe1384.svg" alt='')
+    a.github-badge(target='_blank' href="https://beian.miit.gov.cn/" style='margin-inline:5px' title="本站已加入浙ICP备，浙ICP备2023035770号")
+      img(src="http://cclmsy.gitee.io/sourse/Images/Icons/ICP.svg" alt='')
 
     a.github-badge(target='_blank' href="https://github.com/" style='margin-inline:5px' title="本网站源码由Github提供存储仓库")
       img(src="http://cclmsy.gitee.io/sourse/Images/Icons/Source-Github.svg" alt='')
