--- a/themes/butterfly/layout/includes/widget/card_author.pug
+++ b/themes/butterfly/layout/includes/widget/card_author.pug
@@ -6,7 +6,7 @@ if theme.aside.card_author.enable
           img(src=url_for(theme.avatar.img) onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.flink) + `'` alt="avatar")
         div.author-status-box
           div.author-status
-            g-emoji.g-emoji(alias="palm_tree" fallback-src="https://lskypro.acozycotage.net/LightPicture/2022/12/fe1dc0402e623096.jpg") 🐟
+            g-emoji.g-emoji(alias="palm_tree") 🐟
             span 认真摸鱼中
       b
         .author-info__name= config.author
@@ -24,7 +24,7 @@ if theme.aside.card_author.enable
         .length-num= site.categories.length
 
     if theme.aside.card_author.button.enable
-      a#card-info-btn(href=theme.aside.card_author.button.link title="前往作者的Github")
+      a#card-info-btn(href=theme.aside.card_author.button.link title="前往作者的CodeForces")
         //- i(class=theme.aside.card_author.button.icon)
         span=theme.aside.card_author.button.text
         i.faa-passing.animated(style="padding-left:20px;display:inline-block;vertical-align:middle;")
