--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -36,10 +36,10 @@
             img(src='https://www.fomal.cc/assets/avatar.webp' alt='')
         .img-group-item
           a(href='http://lxtyin.ac.cn/' title='lx_tyin')
-            img(src='http://lxtyin.ac.cn/img/favicon.png' alt='')
+            img(src='http://source.cclmsy.cc/Images/Flinks/Avatars/lxtyin.png' alt='')
         .img-group-item
-          a(href='https://florae006.github.io/' title='DODOLA')
-            img(src='https://florae006.github.io/img/dodola.png' alt='')
+          a(href='https://dodolalorc.cn/' title='DODOLA')
+            img(src='https://dodolalorc.cn/img/dodola.png' alt='')
         .img-group-item
           a(href='javascript:void(0)' title='广告位招租')
             img(src='/assets/ErrAvatar.jpg' alt='')
