--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -36,7 +36,7 @@
             img(src='https://www.fomal.cc/assets/avatar.webp' alt='')
         .img-group-item
           a(href='http://lxtyin.ac.cn/' title='lx_tyin')
-            img(src='http://source.cclmsy.cc/Images/Flinks/Avatars/lxtyin.png' alt='')
+            img(src='https://source.cclmsy.cc/Images/Flinks/Avatars/lxtyin.png' alt='')
         .img-group-item
           a(href='https://dodolalorc.cn/' title='DODOLA')
             img(src='https://dodolalorc.cn/img/dodola.png' alt='')
@@ -85,32 +85,32 @@
   #workboard
   p#ghbdages
     a.github-badge(target='_blank' href="https://hexo.io/" style='margin-inline:5px' title="博客框架为Hexo_v6.3.0")
-      img(src="http://source.cclmsy.cc/Images/Icons/Frame-Hexo-blue.svg" alt='')
+      img(src="https://source.cclmsy.cc/Images/Icons/Frame-Hexo-blue.svg" alt='')
     //- <a target="_blank" href="https://hexo.io/"><img src="https://img.shields.io/badge/Frame-Hexo-blue?style=flat&logo=hexo" title="博客框架为Hexo"></a>&nbsp;
 
     a.github-badge(target='_blank' href="https://butterfly.js.org/" style='margin-inline:5px' title="主题版本Butterfly_v4.3.1")
-      img(src="http://source.cclmsy.cc/Images/Icons/Theme-Butterfly.svg" alt='')
+      img(src="https://source.cclmsy.cc/Images/Icons/Theme-Butterfly.svg" alt='')
     //- <a target="_blank" href="https://butterfly.js.org/"><img src="https://img.shields.io/badge/Theme-Butterfly-6513df?style=flat&logo=bitdefender" title="主题采用butterfly"></a>&nbsp;
 
     a.github-badge(target='_blank' href="https://www.jsdelivr.com/" style='margin-inline:5px' title="本站使用JsDelivr为静态资源提供CDN加速")
-      img(src="http://source.cclmsy.cc/Images/Icons/CDN-jsDelivr-orange.svg" alt='')
+      img(src="https://source.cclmsy.cc/Images/Icons/CDN-jsDelivr-orange.svg" alt='')
     //- <a target="_blank" href="https://www.jsdelivr.com/"><img src="https://img.shields.io/badge/CDN-jsDelivr-orange?style=flat&logo=jsDelivr" title="本站使用JsDelivr为静态资源提供CDN加速"></a> &nbsp;
 
     a.github-badge(target='_blank' href="https://vercel.com/" style='margin-inline:5px' title="本站采用多线部署，主线路托管于Vercel")
-      img(src="http://source.cclmsy.cc/Images/Icons/Hosted-Vervel-brightgreen.svg" alt='')
+      img(src="https://source.cclmsy.cc/Images/Icons/Hosted-Vervel-brightgreen.svg" alt='')
     //- <a target="_blank" href="https://vercel.com/ "><img src="https://img.shields.io/badge/Hosted-Vervel-brightgreen?style=flat&logo=Vercel" title="本站采用双线部署，默认线路托管于Vercel"></a>&nbsp;
 
     //- a.github-badge(target='_blank' href="https://user.51.la/" style='margin-inline:5px' title="本站数据分析得益于51la技术支持")
     //-   img(src="https://sourcebucket.s3.ladydaily.com/badge/Analytics-51la-3db1eb.svg" alt='')
 
     a.github-badge(target='_blank' href="https://github.com/" style='margin-inline:5px' title="本网站源码由Github提供存储仓库")
-      img(src="http://source.cclmsy.cc/Images/Icons/Source-Github.svg" alt='')
+      img(src="https://source.cclmsy.cc/Images/Icons/Source-Github.svg" alt='')
     //- <a target="_blank" href="https://github.com/"><img src="https://img.shields.io/badge/Source-Github-d021d6?style=flat&logo=GitHub" title="本站项目由Gtihub托管"></a>&nbsp;
 
     a.github-badge(target='_blank' href="https://beian.miit.gov.cn/" style='margin-inline:5px' title="本站已加入浙ICP备，浙ICP备2023035770号-1")
-      img(src="http://source.cclmsy.cc/Images/Icons/ICP.svg" alt='')
+      img(src="https://source.cclmsy.cc/Images/Icons/ICP.svg" alt='')
 
     a.github-badge(target='_blank' href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style='margin-inline:5px' title="本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可")
-      img(src="http://source.cclmsy.cc/Images/Icons/Copyright-BY--NC--SA4.svg" alt='')
+      img(src="https://source.cclmsy.cc/Images/Icons/Copyright-BY--NC--SA4.svg" alt='')
       
     //- <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img src="https://img.shields.io/badge/Copyright-BY--NC--SA%204.0-d42328?style=flat&logo=Claris" title="本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可"></a></p>
